<resources>
    <string name="app_name">BioBuzz</string> <!-- App name -->
    <string name="sample_question">What is FUOYE database name?</string> <!-- Sample question -->
    <string name="next">Next</string> <!-- Button text for next -->
    <string name="score_placeholder">Score: 0</string> <!-- Score placeholder -->
    <string name="answer_placeholder">Answer</string> <!-- Answer placeholder -->
    <string name="percent_placeholder">0 / 10</string> <!-- Percentage placeholder -->
    <string name="streak_placeholder">Streak: 0</string> <!-- Streak placeholder -->
    <string name="your_score">Your Score</string> <!-- Your score label -->
    <string name="score_points_placeholder">140PT</string> <!-- Score points placeholder -->
    <string name="start_new_game">Start New Game!</string> <!-- New game button -->
</resources>
