<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context=".EndGameActivity">

    <!-- Container for score display -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/question_container"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <!-- Score title text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewBasicStyle"
            android:textSize="24sp"
            android:text="@string/your_score"
            android:layout_marginTop="20dp"

            />
        <!-- Score value text -->
        <TextView
            android:id="@+id/textViewEndGameScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewBasicStyle"
            android:textSize="32sp"
            android:text="@string/score_points_placeholder"
            android:layout_marginBottom="20dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!-- Button to start a new game -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStartNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/start_new_game"
        android:background="@drawable/next_button"
        style="@style/answer_button_style"

        />


    <!-- ScrollView for dynamic content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/scroll_view"
        tools:ignore="SpeakableTextPresentCheck">

        <!-- Container for additional content -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>